# technician_scheduler_web

./: .env.example  .gitignore  Cargo.toml  README.md
crates/app_client/: Cargo.toml
crates/app_client/src/: lib.rs
crates/app_core/src/: lib.rs
crates/app_server/: Cargo.toml
crates/app_server/migrations/: 001_init.sql
crates/app_server/src/: lib.rs  macros.rs  main.rs  routes.rs
crates/app_server/src/routes/: technician.rs  technicians.rs
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/backend/src/routes/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/frontend/: Cargo.toml
