[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
app_core = { path = "../core" }
frontend = { path = "../frontend", features = ["ssr"] }
axum = "0.8.0"
leptos = { version = "0.8.0", features = ["ssr"] }
leptos_axum = "0.8.0"
leptos_meta = { version = "0.8.0", features = ["ssr"] }
leptos_router = { version = "0.8.0", features = ["ssr"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
